// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertHistogramKeysToDate should convert the histogram date key strings to Date types 1`] = `
Array [
  Object {
    "key": 2018-07-16T00:00:00.000Z,
    "previousValueKey": Array [
      2018-07-15T00:00:00.000Z,
    ],
    "value": 15,
    "valueKey": Array [
      2018-07-16T00:00:00.000Z,
    ],
  },
]
`;

exports[`getMetricsChartData should return data formatted for use in a Metrics chart 1`] = `
Array [
  Object {
    "color": "#4B9BFF",
    "data": Array [
      0,
      10,
      20,
      30,
      40,
      50,
      60,
      70,
      80,
      90,
      100,
      110,
      120,
      130,
      140,
      150,
      160,
      170,
      180,
      190,
      200,
      210,
      220,
      230,
      240,
      250,
      260,
      270,
      280,
      290,
    ],
    "id": "data_1",
    "name": "",
    "tooltipTitle": "",
  },
  Object {
    "color": "#7EB7FF",
    "data": Array [
      0,
      20,
      40,
      60,
      80,
      100,
      120,
      140,
      160,
      180,
      200,
      220,
      240,
      260,
      280,
      300,
      320,
      340,
      360,
      380,
      400,
      420,
      440,
      460,
      480,
      500,
      520,
      540,
      560,
      580,
    ],
    "id": "data_previous",
    "name": "Previous Period",
  },
  Object {
    "data": Array [
      2018-07-10T00:00:00.000Z,
      2018-07-11T00:00:00.000Z,
      2018-07-12T00:00:00.000Z,
      2018-07-13T00:00:00.000Z,
      2018-07-14T00:00:00.000Z,
      2018-07-15T00:00:00.000Z,
      2018-07-16T00:00:00.000Z,
      2018-07-17T00:00:00.000Z,
      2018-07-18T00:00:00.000Z,
      2018-07-19T00:00:00.000Z,
      2018-07-20T00:00:00.000Z,
      2018-07-21T00:00:00.000Z,
      2018-07-22T00:00:00.000Z,
      2018-07-23T00:00:00.000Z,
      2018-07-24T00:00:00.000Z,
      2018-07-25T00:00:00.000Z,
      2018-07-26T00:00:00.000Z,
      2018-07-27T00:00:00.000Z,
      2018-07-28T00:00:00.000Z,
      2018-07-29T00:00:00.000Z,
      2018-07-30T00:00:00.000Z,
      2018-07-31T00:00:00.000Z,
      2018-08-01T00:00:00.000Z,
      2018-08-02T00:00:00.000Z,
      2018-08-03T00:00:00.000Z,
      2018-08-04T00:00:00.000Z,
      2018-08-05T00:00:00.000Z,
      2018-08-06T00:00:00.000Z,
      2018-08-07T00:00:00.000Z,
      2018-08-08T00:00:00.000Z,
    ],
    "id": "x",
  },
]
`;

exports[`getSiteMetricsChartData should return data formatted for use in a Site Metrics chart 1`] = `
Array [
  Object {
    "color": "#4B9BFF",
    "data": Array [
      0,
      55,
      110,
      165,
      220,
      275,
      330,
      385,
      440,
      495,
      550,
      605,
      660,
      715,
      770,
      825,
      880,
      935,
      990,
      1045,
      1100,
      1155,
      1210,
      1265,
      1320,
      1375,
      1430,
      1485,
      1540,
      1595,
    ],
    "dataName": "knownVisitorsMetric",
    "id": "data_1",
    "name": "Known Visitors",
    "tooltipTitle": "Known",
    "type": "bar",
  },
  Object {
    "color": "#FFB46E",
    "data": Array [
      0,
      25,
      50,
      75,
      100,
      125,
      150,
      175,
      200,
      225,
      250,
      275,
      300,
      325,
      350,
      375,
      400,
      425,
      450,
      475,
      500,
      525,
      550,
      575,
      600,
      625,
      650,
      675,
      700,
      725,
    ],
    "dataName": "anonymousVisitorsMetric",
    "id": "data_2",
    "name": "Anonymous Visitors",
    "tooltipTitle": "Anonymous",
    "type": "bar",
  },
  Object {
    "color": "#393A4A",
    "data": Array [
      0,
      170,
      340,
      510,
      680,
      850,
      1020,
      1190,
      1360,
      1530,
      1700,
      1870,
      2040,
      2210,
      2380,
      2550,
      2720,
      2890,
      3060,
      3230,
      3400,
      3570,
      3740,
      3910,
      4080,
      4250,
      4420,
      4590,
      4760,
      4930,
    ],
    "id": "data_previous",
    "name": "Previous Period",
    "type": "line",
  },
  Object {
    "data": Array [
      2018-07-10T00:00:00.000Z,
      2018-07-11T00:00:00.000Z,
      2018-07-12T00:00:00.000Z,
      2018-07-13T00:00:00.000Z,
      2018-07-14T00:00:00.000Z,
      2018-07-15T00:00:00.000Z,
      2018-07-16T00:00:00.000Z,
      2018-07-17T00:00:00.000Z,
      2018-07-18T00:00:00.000Z,
      2018-07-19T00:00:00.000Z,
      2018-07-20T00:00:00.000Z,
      2018-07-21T00:00:00.000Z,
      2018-07-22T00:00:00.000Z,
      2018-07-23T00:00:00.000Z,
      2018-07-24T00:00:00.000Z,
      2018-07-25T00:00:00.000Z,
      2018-07-26T00:00:00.000Z,
      2018-07-27T00:00:00.000Z,
      2018-07-28T00:00:00.000Z,
      2018-07-29T00:00:00.000Z,
      2018-07-30T00:00:00.000Z,
      2018-07-31T00:00:00.000Z,
      2018-08-01T00:00:00.000Z,
      2018-08-02T00:00:00.000Z,
      2018-08-03T00:00:00.000Z,
      2018-08-04T00:00:00.000Z,
      2018-08-05T00:00:00.000Z,
      2018-08-06T00:00:00.000Z,
      2018-08-07T00:00:00.000Z,
      2018-08-08T00:00:00.000Z,
    ],
    "id": "x",
  },
]
`;
